--- a/src/.env
+++ b/src/.env
@@ -1,1 +1,1 @@
-DB_URL= 'mongodb+srv://deepak1812002:deepakch@cluster0.xy0pfov.mongodb.net/todoApp?retryWrites=true&w=majority'
+DB_URL= 'mongodb+srv://deepak1812002:updateCluster@cluster0.xy0pfov.mongodb.net/todoApp?retryWrites=true&w=majority'
